do not load abstract classes