@@ -20,34 +20,46 @@
 package tech.bison.datalift.core.loader;
 
 
+import static org.junit.Assert.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import tech.bison.datalift.core.Context;
-import tech.bison.datalift.core.testmigration.TestDataMigration;
+import tech.bison.datalift.core.DataLiftException;
+import tech.bison.datalift.core.testmigration.valid.TestDataMigration;
+import tech.bison.datalift.core.testmigration.valid.V2_Test_DataMigration_with_description;
 
 class ClasspathMigrationLoaderTest {
 
   @Test
-  void migrationExistsInPackageThenReturnMigration() {
+  void load_migrationExistsInPackage_returnMigration() {
     var context = Mockito.mock(Context.class);
-    var classpathMigrationLoader = new ClasspathMigrationLoader("tech.bison.datalift.core.testmigration");
+    var classpathMigrationLoader = new ClasspathMigrationLoader("tech.bison.datalift.core.testmigration.valid");
 
     var result = classpathMigrationLoader.load(context);
 
-    assertEquals(1, result.size());
-    assertEquals(TestDataMigration.class, result.getFirst().getClass());
+    assertEquals(2, result.size());
+    assertEquals(TestDataMigration.class, result.get(0).getClass());
+    assertEquals(V2_Test_DataMigration_with_description.class, result.get(1).getClass());
   }
 
   @Test
-  void noMigrationExistsInPackageThenReturnNoMigration() {
+  void load_noMigrationExistsInPackage_returnNoMigration() {
     var context = mock(Context.class);
     var classpathMigrationLoader = new ClasspathMigrationLoader("tech.bison.datalift.foo");
 
     var result = classpathMigrationLoader.load(context);
 
     assertEquals(0, result.size());
+  }
+
+  @Test
+  void load_invalidMigrationExistsInPackage_throwsException() {
+    var context = mock(Context.class);
+    var classpathMigrationLoader = new ClasspathMigrationLoader("tech.bison.datalift.core.testmigration.invalid");
+
+    assertThrows(DataLiftException.class, () -> classpathMigrationLoader.load(context));
   }
 }
